# security-scanner

./: README.md  Sample-Prompts-Key-Architecture-Guidelines.md  local_scanner.py  pyproject.toml  test_scanner.py
.claude/skills/port-scan/: SKILL.md
.claude/skills/port-scan/scripts/: detect_os.py  detect_vulns.py  perform_scan.py
